--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@typescript-eslint/eslint-plugin": "1.6.0",
     "@typescript-eslint/parser": "1.6.0",
     "animate.css": "^3.7.0",
+    "axios": "^0.20.0",
     "babel-eslint": "10.0.1",
     "babel-jest": "24.7.1",
     "babel-loader": "8.0.5",
@@ -27,6 +28,7 @@
     "eslint-plugin-react": "7.12.4",
     "eslint-plugin-react-hooks": "^1.5.0",
     "file-loader": "3.0.1",
+    "firebase": "^7.19.1",
     "fs-extra": "7.0.1",
     "html-webpack-plugin": "4.0.0-beta.5",
     "identity-obj-proxy": "3.0.0",
@@ -49,15 +51,19 @@
     "react-countup": "^4.1.3",
     "react-dev-utils": "^9.0.0",
     "react-dom": "^16.8.6",
+    "react-firestore": "^1.0.1",
     "react-id-swiper": "^1.6.9",
     "react-lightgallery": "^0.3.0",
     "react-modal-video": "^1.2.2",
     "react-router-dom": "^5.0.0",
     "react-scroll": "^1.7.12",
+    "react-stripe-elements": "^6.1.2",
     "react-tabs": "^3.0.0",
     "react-visibility-sensor": "^5.0.2",
     "resolve": "1.10.0",
     "sass-loader": "7.1.0",
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^1.2.1",
     "semver": "6.0.0",
     "style-loader": "0.23.1",
     "swiper": "^4.5.0",
